<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6CD9C"
    tools:context=".MainPage">

    <Button
        android:id="@+id/browsebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gotoshop"
        android:text="@string/search"
        android:textColor="#009688"
        app:backgroundTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="164dp"
        android:layout_height="187dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/pinkplant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plan13" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="158dp"
        android:layout_height="185dp"
        android:contentDescription="@string/soGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        app:srcCompat="@drawable/plan12" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="163dp"
        android:layout_height="183dp"
        android:contentDescription="@string/bigpot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        app:srcCompat="@drawable/plan14" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="162dp"
        android:layout_height="186dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/brownpot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pickt" />

    <ImageButton
        android:id="@+id/backbtn"
        android:layout_width="63dp"
        android:layout_height="42dp"
        android:contentDescription="@string/backbuttontomainpage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rightbeginning_personaluse"
        android:text="@string/home"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:id="@+id/settingsbtn"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageButton
        android:id="@+id/sharebtn"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:contentDescription="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        app:srcCompat="?attr/actionModeShareDrawable" />

    <ImageButton
        android:id="@+id/imagebtn"
        android:layout_width="64dp"
        android:layout_height="57dp"
        android:contentDescription="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/messagebtn"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:text="@string/messages"
        android:textColor="#009688"
        android:textSize="12sp"
        app:backgroundTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>